--- a/pkg/Sleuth2/vignettes/chapter04-HortonMosaic.Rnw
+++ b/pkg/Sleuth2/vignettes/chapter04-HortonMosaic.Rnw
@@ -1,3 +1,6 @@
+%\VignetteEngine{knitr}
+%\VignetteIndexEntry{Chapter 04, Horton et al. using mosaic}
+%\VignettePackage{Sleuth2}
 \documentclass[11pt]{article}
 
 \usepackage[margin=1in,bottom=.5in,includehead,includefoot]{geometry}
@@ -43,11 +46,11 @@
      \vspace*{.02\tempfmlength}
      \hfill
      \begin{minipage}{.95 \tempfmlength}}
-		 {\end{minipage}\hfill
-		 \vspace*{.015\tempfmlength}
-		 \end{minipage}\end{lrbox}\fbox{\usebox{\fmbox}}
-	 \medskip
-	 }
+                 {\end{minipage}\hfill
+                 \vspace*{.015\tempfmlength}
+                 \end{minipage}\end{lrbox}\fbox{\usebox{\fmbox}}
+         \medskip
+         }
 
 
 \newenvironment{boxedText}[1][.98\textwidth]%
@@ -67,14 +70,14 @@
   \begin{center}
 \begin{fmpage}{.98\textwidth}
   \begin{center}
-	\sf \large Box~\expandafter\thetable. #2
+        \sf \large Box~\expandafter\thetable. #2
 \end{center}
 \medskip
 }%
 {%
 \end{fmpage}
 \end{center}
-\end{table}		% need to do something about exercises that follow boxedTable
+\end{table}             % need to do something about exercises that follow boxedTable
 }
 
 
@@ -84,7 +87,7 @@
 Chapter 4}
 
 \author{
-Ruobing Zhang \and Kate Aloisio \and Nicholas J. Horton\thanks{Department of Mathematics and Statistics, Smith College, nhorton@smith.edu}
+Ruobing Zhang \and Kate Aloisio \and Nicholas J. Horton\thanks{Department of Mathematics, Amherst College, nhorton@amherst.edu}
 } 
 
 \date{\today}
@@ -98,19 +101,6 @@ Ruobing Zhang \and Kate Aloisio \and Nicholas J. Horton\thanks{Department of Mat
 %\parindent=0pt
 
 
-\SweaveOpts{
-  dev="pdf",
-	fig.path="figures/",
-	fig.height=3,
-	fig.width=4,
-	out.width=".47\\textwidth",
-	fig.keep="high",
-	fig.show="hold",
-	fig.align="center",
-	prompt=TRUE,  # show the prompts; but perhaps we should not do this 
-	comment=NA    # turn off commenting of ouput (but perhaps we should not do this either
-	}
-
 <<pvalues, echo=FALSE, message=FALSE>>=
 print.pval = function(pval) {
   threshold = 0.0001
@@ -120,6 +110,21 @@ print.pval = function(pval) {
 }
 @
 
+<<setup0, include=FALSE, cache=FALSE>>=
+require(knitr)
+opts_chunk$set(
+  dev="pdf",
+  fig.path="figures/",
+        fig.height=3,
+        fig.width=4,
+        out.width=".47\\textwidth",
+        fig.keep="high",
+        fig.show="hold",
+        fig.align="center",
+        prompt=TRUE,  # show the prompts; but perhaps we should not do this 
+        comment=NA    # turn off commenting of ouput (but perhaps we should not do this either
+  )
+@
 <<setup,echo=FALSE,message=FALSE>>=
 require(Sleuth2)
 require(mosaic)
@@ -144,7 +149,7 @@ This document is intended to help describe how to undertake analyses introduced 
 More information about the book can be found at \url{http://www.proaxis.com/~panorama/home.htm}.
 This
 file as well as the associated \pkg{knitr} reproducible analysis source file can be found at
-\url{http://www.math.smith.edu/~nhorton/sleuth}.
+\url{http://www.amherst.edu/~nhorton/sleuth}.
 
 
 This work leverages initiatives undertaken by Project MOSAIC (\url{http://www.mosaic-web.org}), an NSF-funded effort to improve the teaching of statistics, calculus, science and computing in the undergraduate curriculum. In particular, we utilize the 
@@ -215,7 +220,7 @@ We want to get the total number of regroupings by calculating \emph{$C_{24,4}$}.
 C244=factorial(24)/(factorial(4)*factorial(24-4)); C244
 @
 
-There are a total of \Sexpr{C244} regroupings with 8 possible (non-equiprobable) outcomes:
+There are a total of $\Sexpr{C244}$ regroupings with 8 possible (non-equiprobable) outcomes:
 (0, 0, 0, 0), (0, 0, 0, 1), (0, 0, 0, 2), (0, 0, 0, 3), (0, 0, 1, 1), (0, 0, 1, 2), (0, 0, 1, 3), (0, 0, 2, 3), (0, 1, 1, 1), (0, 1, 1, 2), (0, 1, 1, 3), (0, 1, 2, 3), (1, 1, 1, 1), (1, 1, 1, 2), (1, 1, 1, 3), (1, 1, 2, 3). Because the observed cold temperature outcomes was (1, 1, 1, 3), we will only examine the same or more extreme groupings, which are (1, 1, 2, 3) and (0, 1, 2, 3).
 
 <<>>=
@@ -230,7 +235,7 @@ with(case0401, t.test(Incidents[c(1,4,5,24)], Incidents[-c(1,4,5,24)], var.equal
 The test statistic for (1, 1, 2, 3) is \Sexpr{t.test(case0401[c(1,2,4,24),]$Incidents, case0401[-c(1,2,4,24),]$Incidents, var.equal=TRUE)$statistic} 
 and the test statistic for (0, 1, 2, 3) is \Sexpr{t.test(case0401[c(1,4,5,24),]$Incidents, case0401[-c(1,4,5,24),]$Incidents, var.equal=TRUE)$statistic}.
 
-We already know that the total number of regroupings is \emph{$C_{24,4}$}=\Sexpr{C244}. In order to calculate the $p$-value, we need to know the combinations of (1, 1, 1, 3), (2, 1, 2, 3) and (0, 1, 2, 3). There are 17 zeros, 5 ones, 1 two and 1 three.
+We already know that the total number of regroupings is \emph{$C_{24,4}$}=$\Sexpr{C244}$. In order to calculate the $p$-value, we need to know the combinations of (1, 1, 1, 3), (2, 1, 2, 3) and (0, 1, 2, 3). There are 17 zeros, 5 ones, 1 two and 1 three.
 
 For outcome (1, 1, 1, 3), we calculate C1113=\emph{$C_{5,3}$}*\emph{$C_{1,1}$}:
 <<>>=
@@ -274,7 +279,6 @@ Does use of modified instructional materials lead to quicker problem solving? Th
 We begin by reading the data and summarizing the variables.
 
 <<>>=
-teaching = read.csv("http://www.math.smith.edu/~nhorton/sleuth/case0402.csv")
 summary(case0402)
 favstats(Time ~ Treatmt, data=case0402)
 @
